# scripting-pdf

./: .gitignore  AUTOMATED_TRANSLATION_GUIDE.md  Bruce_Hyde,_Drew_Kopp_Speaking_Being_Werner_Erhard,_Martin_Heidegger (1)_analysis.json  PDF_ANALYSIS_GUIDE.md  PDF_EXTRACTION_METHODS_GUIDE.md  PRECISE_PROMPTS_ANALYSIS.md  README.md  app.py  automated_translator.py  batch_pdf_analyzer.py  batch_translate.py  chapter_extraction_summary.txt  chapter_extractor.py  comprehensive_toc_processor.py  consolidated_100_pages.md  consolidated_200_pages.md  consolidated_50_pages.md  consolidated_translation_generator.py  create_translated_pages.py  create_translation.py  database.py  docker-compose.yml  enhanced_database.py  enhanced_multi_agent_pipeline.py  extract_all_pages.py  forum_session_extractor.py  main.py  manual_translation_generator.py  multi_agent_pipeline.py  pdf_analyzer_example.py  pdf_extractor.py  pdf_reconstructor.py  pdf_section_extractor.py  pdf_text_analyzer.py  pipeline_orchestrator.py  precise_prompt_designer.py  pyproject.toml  specialized_prompts.txt  test_pipeline.py  toc_based_extractor.py  (+2 more)
chapters/: chapter_001_original.txt  chapter_002_original.txt  chapter_003_original.txt
extracted_pages/: page_001_original.txt  page_002_original.txt  page_003_original.txt  page_004_original.txt  page_005_original.txt  page_006_original.txt  page_007_original.txt  page_008_original.txt  page_009_original.txt  page_010_original.txt  page_011_original.txt  page_012_original.txt  page_013_original.txt  page_014_original.txt  page_015_original.txt  page_016_original.txt  (+34 more)
(+1198 files in other folders)
